--- a/mainapp/assets/css/_vars.scss
+++ b/mainapp/assets/css/_vars.scss
@@ -65,7 +65,7 @@ $index-main-buttons-btn-text: white !default;;
 $index-meetings-section-background: #fff !default;
 $index-meetings-title-color: #111 !default;
 $index-meetings-title-background: transparent !default;
-$index-meetings-btn: #3B8686 !default;
+$index-meetings-btn: #308282 !default;
 
 $index-documents-section-background: #A8DBA8 !default;
 $index-documents-title-color: #111 !default;
